--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,4 +1,36 @@
 .header {
+
+    // Hamburger Open Styles
+    &.open {
+        .overlay{
+            display: block;
+            animation: fade-in 300ms ease-in-out forwards;
+        }
+
+        .header__toggle{
+            > span:first-child {
+                transform: rotate(45deg);
+            }
+            > span:nth-child(2) {
+                opacity: 0;
+            }
+            > span:last-child {
+                transform: rotate(-45deg);
+            }
+        }
+      
+    }
+
+    .overlay {
+        position: fixed;
+        top: 3.75rem;
+        right: 0px;
+        bottom: 0px;
+        left: 0px;
+        background-image: linear-gradient($darkBlue, transparent);
+    }
+    
+
     nav {
         padding: 1.063rem 1.5rem;
     }
@@ -10,15 +42,16 @@
         }
     }
 
-    &__menu {
+    &__toggle {
         > span {
             display: block;
             width: 26px;
             height: 2px;
             background-color: $darkBlue;
-
+            transition: all 300ms ease-in-out;
+            transform-origin: 3px 1px;
             &:not(:last-child) {
-                margin-bottom: 3px;
+                margin-bottom: 5px;
             }
         }
     }
@@ -32,7 +65,7 @@
             &:not(:last-child) {
                 margin-right: 32px;
             }
-            &::before{
+            &::before {
                 content: "";
                 position: absolute;
                 display: block;
@@ -44,8 +77,8 @@
                 transition: opacity 200ms ease-in-out;
                 background: linear-gradient(to right, $limeGreen, $brightCyan);
             }
-            &:hover{
-                &::before{
+            &:hover {
+                &::before {
                     opacity: 1;
                 }
                 color: $darkBlue;
@@ -57,7 +90,7 @@
         font-size: $font-sm;
         color: $white;
         transition: opacity 300ms ease-in-out;
-        &:hover{
+        &:hover {
             opacity: 0.75;
         }
     }
