--- a/app/scss/_animations.scss
+++ b/app/scss/_animations.scss
@@ -1,18 +1,25 @@
+
+.has-fade {
+    visibility: hidden;
+}
+
 @keyframes fade-in {
     from {
         visibility: hidden;
         opacity: 0;
     }
-    1%{
+    1% {
         visibility: visible;
         opacity: 0;
     }
     to {
         opacity: 1;
+        visibility: visible;
     }
 }
-.fade-in{
-    animation: fade-in 300ms ease-in-out forwards;
+
+.fade-in {
+    animation: fade-in 200ms ease-in-out forwards;
 }
 
 @keyframes fade-out {
@@ -20,7 +27,7 @@
         visibility: visible;
         opacity: 1;
     }
-    99%{
+    99% {
         visibility: visible;
         opacity: 0;
     }
@@ -30,6 +37,6 @@
     }
 }
 
-.fade-out{
-    animation: fade-out 300ms ease-in-out forwards;
+.fade-out {
+    animation: fade-out 200ms ease-in-out forwards;
 }
