--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -13,18 +13,73 @@ body {
     margin: 0;
     padding: 0;
     line-height: 1.3;
-    font-size: $font-med;
+    font-size: $font-sm;
     font-weight: 300;
     color: $grayishBlue;
     font-family: "Public Sans", sans-serif;
+
+    @include breakpoint-up(large) {
+        font-size: $font-med;
+    }
+
+    &.no-scroll {
+        overflow: hidden;
+    }
+}
+
+h1,
+h2,
+h3 {
+    margin-top: 0px;
 }
 
 a,
 a:visited,
 a:hover {
     text-decoration: none;
-    color: $grayishBlue;
 }
+
+//spacing
+// Spacing
+.container {
+    max-width: 69.375rem;
+    margin: 0 auto;
+  
+    &--pall {
+      padding-top: 4.375rem;
+      padding-right: 1.5rem;
+      padding-bottom: 4.375rem;
+      padding-left: 1.5rem;
+
+    }
+    &--py {
+      padding-top: 4.375rem;
+      padding-bottom: 4.375rem;
+  
+     
+    }
+    &--px {
+      padding-right: 1.5rem;
+      padding-left: 1.5rem;
+    }
+
+    &--pt {
+      padding-top: 4.375rem;
+    }
+
+    &--pr {
+      padding-right: 1.5rem;
+    }
+
+    &--pb {
+      padding-bottom: 4.375rem;
+    }
+    &--pl {
+      padding-left: 1.5rem;
+    }
+  }
+  
+
 //FlexBox
 .flex {
     display: flex;
@@ -40,29 +95,36 @@ a:hover {
     &-ai-c {
         align-items: center;
     }
-} 
+}
 
 //Buttons
 button,
 .button {
+    display: inline-block;
     padding: 0.875rem 2.1875rem;
+    background: linear-gradient(to right, $limeGreen, $brightCyan);
     border-radius: 50px;
+    cursor: pointer;
     border: 0;
     color: $white;
     font-weight: 400;
-    background: linear-gradient(to right, $limeGreen, $brightCyan);
-    cursor: pointer;
+    font-size: $font-sm;
+    color: $white;
+    transition: opacity 300ms ease-in-out;
+    &:hover {
+        opacity: 0.75;
+    }
 }
 
 // Visibility
 .hide-for-mobile {
     @include breakpoint-down(medium) {
-      display: none;
+        display: none;
     }
-  }
-  
-  .hide-for-desktop {
+}
+
+.hide-for-desktop {
     @include breakpoint-up(large) {
-      display: none;
+        display: none;
     }
-  }
+}
