--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,13 +1,12 @@
 .header {
-
     // Hamburger Open Styles
     &.open {
-        .overlay{
+        .overlay {
             display: block;
             animation: fade-in 300ms ease-in-out forwards;
         }
 
-        .header__toggle{
+        .header__toggle {
             > span:first-child {
                 transform: rotate(45deg);
             }
@@ -18,21 +17,23 @@
                 transform: rotate(-45deg);
             }
         }
-      
     }
 
     .overlay {
+        opacity: 0;
         position: fixed;
-        top: 3.75rem;
+        top: 0px;
         right: 0px;
         bottom: 0px;
         left: 0px;
         background-image: linear-gradient($darkBlue, transparent);
     }
-    
 
     nav {
-        padding: 1.063rem 1.5rem;
+        position: relative;
+        background-color: $white;
+        padding-top: 1.0625rem;
+        padding-bottom: 1.0625rem;
     }
 
     &__logo {
@@ -53,6 +54,24 @@
             &:not(:last-child) {
                 margin-bottom: 5px;
             }
+        }
+    }
+
+    &__menu {
+        position: absolute;
+        width: calc(100% - 6rem);
+        left: 50%;
+        transform: translateX(-50%);
+        background: hsl(0, 0%, 100%);
+        padding: 1.625rem;
+        border-radius: 5px;
+        margin-top: 1.5rem;
+        z-index: 1;
+        a {
+            color: $darkBlue;
+            padding: 0.625rem;
+            display: block;
+            text-align: center;
         }
     }
 
